Change since cclib-0.8:

Features:
	* New parser: cclib can now parse ORCA files
	* Added option to use setuptools instead of distutils.core for installing
	* Improved handling of CI and TD-DFT data: TD-DFT data extracted from
	GAMESS and etsecs standardised across all parsers
	* Test suite changed to include output from only the newest program versions

Bugfixes:
	* A small number of parsing errors were fixed

Change since cclib-0.7:

Features:
	* New parser: cclib can now parse Molpro files
	* Separation of parser and data objects: Parsed data is now returned
	as a ccData object that can be pickled, and converted to and from JSON
	* Parsers: multiple files can be parsed with one parse command
	* NumPy support: Dropped Numeric support in favour of NumPy
	* API addition: 'charge' for molecular charge
	* API addition: 'mult' for spin multiplicity
	* API addition: 'atombasis' for indices of atom orbitals on each atom
	* API addition: 'nocoeffs' for Natural Orbital (NO) coefficients
	* GAMESS-US parser: added 'etoscs' (CIS calculations)
	* Jaguar parser: added 'mpenergies' (LMP2 calcualtions)
	* Jaguar parser: added 'etenergies' and 'etoscs' (CIS calculations)
	* New method: Lowdin Population Analysis (LPA)
	* Tests: unittests can be run from the Python interpreter, and for
	a single parser; the number of "passed" tests is also counted and shown

Bugfixes:
	* Several parsing errors were fixed
	* Fixed some methods to work with different numbers of alpha and beta
	MO coefficients in mocoeffs (MPA, CSPA, OPA)

Changes since cclib-0.6.1:

Features:
	* New parser: cclib can now parse Jaguar files
	* ccopen: Can handle log files which have been compressed into .zip,
	.bz2 or .gz files.
	* API addition: 'gbasis' holds the Gaussian basis set
	* API addition: 'coreelectrons' contains the number of core electrons
	in each atom's pseudopotential
	* API addition: 'mpenergies' holds the Moller-Plesset corrected
	molecular electronic energies