@@ -1,4 +1,4 @@
-cclib 0.9 is now available for download from http://cclib.sf.net.
+cclib 1.0 is now available for download from http://cclib.sf.net.
 
 cclib is an open source library, written in Python, for parsing and interpreting the results of computational chemistry packages. It currently parses output files from ADF, GAMESS (US), GAMESS-UK, Gaussian, Jaguar, Molpro, ORCA and PC GAMESS.
 
