@@ -1,10 +1,10 @@
 """
-cclib (http://cclib.sf.net) is (c) 2006, the cclib development team
+cclib (http://cclib.sf.net) is (c) 2006-2010, the cclib development team
 and licensed under the LGPL (http://www.gnu.org/copyleft/lgpl.html).
 """
 
 __revision__ = "$Revision$"
-__version__ = "1.0a"
+__version__ = "1.0b"
 
 import parser
 import progress
