@@ -1,3 +1,11 @@
+Change since cclib-0.9:
+
+Features:
+	* ?
+
+Bugfixes:
+	* Various parsing errors were fixed.
+
 Change since cclib-0.8:
 
 Features:
